Data Access Objects Implementation

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <spring.version>5.1.9.RELEASE</spring.version>
   </properties>
+
 
   <dependencies>
   
@@ -33,7 +35,24 @@
 	    <artifactId>servlet-api</artifactId>
 	    <version>2.5</version>
 	</dependency>
-	
+
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>${spring.version}</version>
+	</dependency>
+	    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>${spring.version}</version>
+        <type>jar</type>
+        <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -72,4 +91,7 @@
       </plugins>
     </pluginManagement>
   </build>
+  
+ 
+  
 </project>
